# App-Builder

./: .bandit  .cleanup-complete.txt  .dockerignore  .env.demo  .env.example  .env.production  .env.production.template  .env.railway.template  .gitignore  .launchforge_admin_credentials.json  .pre-commit-config.yaml  .secrets.baseline  .valeric_admin_credentials.json  .yamllint.yml  ACCEPTABLE_USE_POLICY.md  APP_BUILDER_PIPELINE.md  BUILD_ALL_PAGES.sh  BUILD_STATUS.txt  CLAUDE.md  CODE_AUDIT_REPORT.md  DEPLOYMENT.md  DESIGN_UPGRADE_PLAN.md  DEVELOPMENT.md  Dockerfile  Dockerfile.simple  EXECUTION_PLAN_AND_CONTEXT.md  FINAL_AUDIT_REPORT.md  FUNDING_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_STATUS.md  LICENSE  OPERATIONS_RUNBOOK.md  PERFECTION_BUILD_LOG.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PRIVACY_POLICY.md  PRODUCTION_CHECKLIST.md  Procfile  QUICK_START.md  (+49 more)
alembic/: env.py
api/: __init__.py  polygon_client.py
backend/: main.py
demo_app_v1/: DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml  render.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BETA_LAUNCH_CHECKLIST.md  BETA_USER_GUIDE.md  CONFIGURATION.md  DEPLOYMENT_ALTERNATIVES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TROUBLESHOOTING.md  EMAIL_SETUP.md  MIGRATIONS.md  PREDEPLOY_CHECKLIST.md  SETUP.md  TESTING.md
frontend/: package-lock.json  package.json
generated_app/: .env.example  .gitignore  README.md  docker-compose.yml
generated_app_v2/: DEPLOY.md  README.md  docker-compose.yml  render.yaml
nginx/: nginx.conf
scripts/: deploy-railway.sh  deploy.sh  init-db.sql  smoke-test.ps1  smoke-test.sh
src/: __init__.py  assistant.py  branding.py  cli.py  config.py  config_validation.py  demo_data.py  llm_council.py  logging_config.py  models.py  performance.py  pipeline.py
strategy/: __init__.py  momentum.py
test_output_phase5/: DEPLOY.md  docker-compose.yml  render.yaml
tests/: conftest.py  runtime_stress_test.py  test_agents.py  test_analytics.py  test_api_docs.py  (+53 more)
(+527 files in other folders)
