[project]
name = "app-builder"
version = "1.0.0"
description = "AI-powered application builder"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(venv|.venv|env|.env|migrations)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = ["venv", ".venv", "env", "migrations"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "B", "S"]
ignore = ["E501", "B008", "S101"]
exclude = ["venv", ".venv", "migrations", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "output", "htmlcov"]
skips = ["B101", "B104", "B311"]  # Skip assert, bind all interfaces, random for non-crypto

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
